DERBY-7134 workaround with plain INSERT/UPDATE implementation