@@ -26,7 +26,6 @@ import eu.dariolucia.reatmetric.persist.Archive;
 import java.io.IOException;
 import java.sql.*;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -37,10 +36,6 @@ public class AcknowledgedMessageArchive extends AbstractDataItemArchive<Acknowle
 
     private static final String INSERT_STATEMENT = "INSERT INTO ACK_MESSAGE_TABLE(UniqueId,GenerationTime,MessageId,State,UserName,AcknowledgementTime,AdditionalData) VALUES (?,?,?,?,?,?,?)";
     private static final String UPDATE_STATEMENT = "UPDATE ACK_MESSAGE_TABLE SET GenerationTime = ?, MessageId = ?, State = ?, UserName = ?, AcknowledgementTime = ?, AdditionalData = ? WHERE UniqueId = ?";
-    private static final String STORE_STATEMENT = "MERGE INTO ACK_MESSAGE_TABLE USING SYSIBM.SYSDUMMY1 ON UniqueId = ? " +
-            "WHEN MATCHED THEN UPDATE SET GenerationTime = ?, MessageId = ?, State = ?, UserName = ?, AcknowledgementTime = ?, AdditionalData = ? " +
-            "WHEN NOT MATCHED THEN INSERT (UniqueId,GenerationTime,MessageId,State,UserName,AcknowledgementTime,AdditionalData) VALUES (?,?,?,?,?,?,?)";
-    // TODO: replace storeBuffer MERGE operation with INSERT (no ack time)/UPDATE (with ack time)
     private static final String LAST_ID_QUERY = "SELECT UniqueId FROM ACK_MESSAGE_TABLE ORDER BY UniqueId DESC FETCH FIRST ROW ONLY";
     private static final String RETRIEVE_BY_ID_QUERY = "SELECT a.UniqueId, a.GenerationTime, a.State, a.UserName, a.AcknowledgementTime, a.AdditionalData, " +
             "b.UniqueId, b.GenerationTime, b.Id, b.Text, b.Source, b.Severity, b.LinkedEntityId, b.AdditionalData " +
@@ -54,47 +49,120 @@ public class AcknowledgedMessageArchive extends AbstractDataItemArchive<Acknowle
     }
 
     @Override
-    protected void setItemPropertiesToStatement(PreparedStatement storeStatement, AcknowledgedMessage item) throws SQLException {
-        storeStatement.setLong(1, item.getInternalId().asLong());
-        storeStatement.setTimestamp(2, toTimestamp(item.getGenerationTime()));
-        storeStatement.setLong(3, item.getMessage().getInternalId().asLong());
-        storeStatement.setShort(4, (short) item.getState().ordinal());
-        if(item.getUser() == null) {
-            storeStatement.setNull(5, Types.VARCHAR);
-        } else {
-            storeStatement.setString(5, item.getUser());
-        }
-        storeStatement.setTimestamp(6, toTimestamp(item.getAcknowledgementTime()));
-        Object extension = item.getExtension();
-        if(extension == null) {
-            storeStatement.setNull(7, Types.BLOB);
-        } else {
-            storeStatement.setBlob(7, toInputstream(item.getExtension()));
-        }
-
-        storeStatement.setLong(8, item.getInternalId().asLong());
-        storeStatement.setTimestamp(9, toTimestamp(item.getGenerationTime()));
-        storeStatement.setLong(10, item.getMessage().getInternalId().asLong());
-        storeStatement.setShort(11, (short) item.getState().ordinal());
-        if(item.getUser() == null) {
-            storeStatement.setNull(12, Types.VARCHAR);
-        } else {
-            storeStatement.setString(12, item.getUser());
-        }
-        storeStatement.setTimestamp(13, toTimestamp(item.getAcknowledgementTime()));
-        if(extension == null) {
-            storeStatement.setNull(14, Types.BLOB);
-        } else {
-            storeStatement.setBlob(14, toInputstream(item.getExtension()));
-        }
+    protected void setItemPropertiesToStatement(PreparedStatement storeStatement, AcknowledgedMessage item) {
+        throw new UnsupportedOperationException("This operation should not be called for this class implementation. This is a software bug.");
     }
 
     @Override
-    protected PreparedStatement createStoreStatement(Connection connection) throws SQLException {
-        if(LOG.isLoggable(Level.FINEST)) {
-            LOG.finest(this + " - preparing store statement: " + STORE_STATEMENT);
+    protected PreparedStatement createStoreStatement(Connection connection) {
+        throw new UnsupportedOperationException("This operation should not be called for this class implementation. This is a software bug.");
+    }
+
+    @Override
+    protected void doStore(Connection connection, List<AcknowledgedMessage> itemsToStore) throws SQLException {
+        if (LOG.isLoggable(Level.FINER)) {
+            LOG.finer(this + " - request to store " + itemsToStore.size() + " items");
+            if (LOG.isLoggable(Level.FINEST)) {
+                for (AcknowledgedMessage item : itemsToStore) {
+                    LOG.finest("Storing " + item);
+                }
+            }
         }
-        return connection.prepareStatement(STORE_STATEMENT);
+
+        // For each item, try to insert it if the ack state is pending: in case of issues, or if ack state is not pending, run an update
+        for(AcknowledgedMessage item : itemsToStore) {
+            boolean inserted = false;
+            if(item.getState() == AcknowledgementState.PENDING) {
+                // Run INSERT
+                inserted = tryInsert(connection, item);
+            }
+            if(!inserted) {
+                // Run UPDATE
+                tryUpdate(connection, item);
+            }
+        }
+    }
+
+    private void tryUpdate(Connection connection, AcknowledgedMessage item) throws SQLException {
+        try (PreparedStatement storeStatement = connection.prepareStatement(UPDATE_STATEMENT)) {
+            storeStatement.setTimestamp(1, toTimestamp(item.getGenerationTime()));
+            storeStatement.setLong(2, item.getMessage().getInternalId().asLong());
+            storeStatement.setShort(3, (short) item.getState().ordinal());
+            if(item.getUser() == null) {
+                storeStatement.setNull(4, Types.VARCHAR);
+            } else {
+                storeStatement.setString(4, item.getUser());
+            }
+            storeStatement.setTimestamp(5, toTimestamp(item.getAcknowledgementTime()));
+            Object extension = item.getExtension();
+            if(extension == null) {
+                storeStatement.setNull(6, Types.BLOB);
+            } else {
+                storeStatement.setBlob(6, toInputstream(item.getExtension()));
+            }
+            storeStatement.setLong(7, item.getInternalId().asLong());
+            storeStatement.addBatch();
+            int[] numUpdates = storeStatement.executeBatch();
+            if (LOG.isLoggable(Level.FINEST)) {
+                for (int i = 0; i < numUpdates.length; i++) {
+                    if (numUpdates[i] == -2) {
+                        LOG.finest("Batch job[" + i +
+                                "]: unknown number of rows updated");
+                    } else {
+                        LOG.finest("Batch job[" + i +
+                                "]: " + numUpdates[i] + " rows updated");
+                    }
+                }
+            }
+            connection.commit();
+        } catch (SQLException e) {
+            e.printStackTrace();
+            connection.rollback();
+        }
+    }
+
+    private boolean tryInsert(Connection connection, AcknowledgedMessage item) {
+        boolean inserted = false;
+        try (PreparedStatement storeStatement = connection.prepareStatement(INSERT_STATEMENT)) {
+            storeStatement.setLong(1, item.getInternalId().asLong());
+            storeStatement.setTimestamp(2, toTimestamp(item.getGenerationTime()));
+            storeStatement.setLong(3, item.getMessage().getInternalId().asLong());
+            storeStatement.setShort(4, (short) item.getState().ordinal());
+            if (item.getUser() == null) {
+                storeStatement.setNull(5, Types.VARCHAR);
+            } else {
+                storeStatement.setString(5, item.getUser());
+            }
+            storeStatement.setTimestamp(6, toTimestamp(item.getAcknowledgementTime()));
+            if (item.getExtension() == null) {
+                storeStatement.setNull(7, Types.BLOB);
+            } else {
+                storeStatement.setBlob(7, toInputstream(item.getExtension()));
+            }
+            storeStatement.addBatch();
+            int[] numUpdates = storeStatement.executeBatch();
+            if (LOG.isLoggable(Level.FINEST)) {
+                for (int i = 0; i < numUpdates.length; i++) {
+                    if (numUpdates[i] == -2) {
+                        LOG.finest("Batch job[" + i +
+                                "]: unknown number of rows updated");
+                    } else {
+                        LOG.finest("Batch job[" + i +
+                                "]: " + numUpdates[i] + " rows updated");
+                    }
+                }
+            }
+            connection.commit();
+            inserted = true;
+        } catch (SQLException e) {
+            e.printStackTrace();
+            try {
+                connection.rollback();
+            } catch (SQLException ex) {
+                ex.printStackTrace();
+            }
+        }
+        return inserted;
     }
 
     @Override
@@ -184,7 +252,7 @@ public class AcknowledgedMessageArchive extends AbstractDataItemArchive<Acknowle
 
     @Override
     protected List<String> getPurgeQuery(Instant referenceTime, RetrievalDirection direction) {
-        return Arrays.asList(
+        return List.of(
                 "DELETE FROM ACK_MESSAGE_TABLE WHERE GenerationTime " + (direction == RetrievalDirection.TO_FUTURE ? ">" : "<") + "'" + toTimestamp(referenceTime) + "'"
         );
     }
